--- a/ostoslista_sqlite/package.json
+++ b/ostoslista_sqlite/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "etsi_osoite_sijainnilla",
+  "name": "ostoslista_sqlite",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -12,10 +12,9 @@
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.5",
-    "expo-location": "~14.3.0",
-    "react-native-maps": "0.31.1",
-    "expo-updates": "~0.14.6"
+    "react-native": "0.69.6",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "expo-sqlite": "~10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
