--- a/Tekstipuheeksi/package.json
+++ b/Tekstipuheeksi/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kontakti",
+  "name": "teksti_puheeksi",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -13,8 +13,7 @@
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
-    "expo-contacts": "~10.3.0",
-    "expo-updates": "~0.14.6"
+    "expo-speech": "~10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
