--- a/ostoslista_sqlite/package.json
+++ b/ostoslista_sqlite/package.json
@@ -14,7 +14,8 @@
     "react": "18.0.0",
     "react-native": "0.69.6",
     "@react-native-async-storage/async-storage": "~1.17.3",
-    "expo-sqlite": "~10.3.0"
+    "expo-sqlite": "~10.3.0",
+    "expo-updates": "~0.14.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
